--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     },
     "peerDependencies": {
         "react": "^16.8.6 || ^17.0.0",
-        "react-native": "^0.60.0"
+        "react-native": ">=0.60.0"
     },
     "release": {
         "plugins": [
