--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
         "typescript": "^3.8.3"
     },
     "peerDependencies": {
-        "react": "^16.8.6",
+        "react": "^16.8.6 || ^17.0.0",
         "react-native": "^0.60.0"
     },
     "release": {
